gave menu marging L R 0 on smallscreen to prevent horiz scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1172,7 +1172,7 @@ nav > ul > li {
  }
 
  #menu {
-    margin: auto;
+    margin: 20px 0;
  }
 
  #toasties {
